# PolyGuez

./: .deploy-trigger  .deployignore  .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  ENHANCEMENTS.md  FAQ.md  GLOSSARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  MAINTAINERS.md  MIGRATION_ACTION_PLAN.md  MIGRATION_GUIDE.md  Procfile  QUICK_START.md  README.md  README_TRADING_BOT.md  REVIEW_INDEX.md  SECURITY.md  SYSTEM.md  UV_MIGRATION_REVIEW.md  agent_config.example.json  bot poly.code-workspace  dashboard.html  docker-compose.yml  init.sql  package.json  paper_decisions.jsonl  (+22 more)
.cursor/plans/: multi-provider-search-and-llm-support-d6491107.plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent-runtime-issue.yml  bug_report.md  feature_request.yml
.github/automation/: README_AUTOMATION.md  README_AUTOMATION_EXT.md
.github/scripts/: refresh_context.py
.github/workflows/: bot-auto-pr.yml  ci.yml  cli-smoke-test.yml  dependency-review.yml  deploy-on-merge.yml  hourly-summary.yml  monitor-codeql.yml  python-app.yml  python-type-check.yml  refresh-context.yml  tests.yml
agents/: __init__.py  logging_utils.py
agents/analytics/: __init__.py  calibration.py  metrics.py
agents/application/: __init__.py  clob_manager.py  cron.py  enhanced_trader.py  executor.py  executor_enhanced.py  fast_entry_engine.py  latency_stats.py  position_manager.py  prompts.py  risk_manager.py  run_polyguez.py  trade.py  trade_metrics.py  trade_risk_enhanced.py  trader_integrated.py  trader_market_data.py
agents/connectors/: __init__.py  blockrun.py  chainlink_feed.py  chroma.py  cogdx.py  mediastack.py  newsdata.py  search.py
agents/examples/: dca_strategy.py
agents/llm/: __init__.py  client.py
agents/market_data/: __init__.py  execution_engine.py  health_server.py  orderbook.py
agents/polymarket/: __init__.py  (+3 more)
configs/: agent.example.yaml
docs/: AGENTS_OVERVIEW.md  AGENT_GLOSSARY.md  AGENT_LIFECYCLE.md  AGENT_LIMITATIONS.md  AGENT_ROLES.md  AUTHORIZATION.md  CLI_QUICKSTART_EXAMPLES.md  CONFIGURATION_NOTES.md  CONFIG_EXAMPLE.md  CONFIG_FILES_OVERVIEW.md  DEPLOYMENT_GUIDE.md  DEV_SETUP.md  EXAMPLE.md  FAQ.md  LOCAL_RUN_NOTES.md  LOGGING_CONVENTIONS.md  LOGGING_GUIDELINES.md  METRICS_EXPORT.md  PROXY_VERIFICATION.md  STATUS.md  STYLE_GUIDE.md  TERMINAL_DISCIPLINE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_PORTS.md  UPDATE-CONTEXT.md  VPS_HARDENING.md  basic_agent_structure.md  cogdx_integration.md  dev_logging_guidelines.md  k_recalibration_2026_04_16.md  local-dev-quickstart.md
examples/: agent_config_example.yaml  agent_health_check.py
polyguez-control/: Dockerfile  entrypoint.sh  package-lock.json  package.json  server.js
reports/: .gitkeep
samples/: README.md  clob_book_no.json  clob_book_yes.json  clob_price_no.json  clob_price_yes.json  gamma_markets.json
scripts/: README.md  __init__.py  activate_uv.sh  aggregate_trades.py  check-agent-env.sh  count_archive_trades.py  count_trades.py  dev.ps1  fetch_polymarket_samples.ts  fix-ports.ps1  reset-dev.ps1  run_checks.sh  send_test_alert.py  status.ps1  test_deploy_ssh.sh  trade_report.py  trade_stats.py  uv-run.sh
src/: order_executor.py  timeframes.py
supabase/: schema.sql
tests/: test_basic_imports.py  test_config_validator.py  test_debug_and_webhook_decision.py  test_env_loading.py  test_gamma.py  test_integration.py  test_market_data.py  test_ndjson_logger.py  test_p2b.py  test_position_sizing.py  test_risk.py  test_risk_manager.py  test_signal.py  test_strategy.py  test_trade.py  test_webhook_server_import.py  test_winrate_upgrade.py
tools/: analyze_trades_detailed.py  archive_stats.py  calc_winrate.py  check_adapter.py  check_try_balance.py  compile_progress.py  count_trades.py  count_trades_now.py  dump_tokens.py  find_try_mismatch.py  find_unclosed_try.py  force_subscribe.py  http_smoke.py  import_test.py  inject_market_event.py  match_try_except.py  run_smoke.py  show_lines.py  show_try_lines.py  tokens_dump.txt  try_balance.txt  try_lines.txt
(+256 files in other folders)
