[project]
name = "polymarket-agents"
version = "0.1.0"
description = "AI agents for Polymarket prediction markets - trade autonomously using LangChain and modern AI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Polymarket", email = "liam@polymarket.com"}
]
keywords = ["polymarket", "prediction-markets", "ai-agents", "langchain", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Polymarket & Blockchain (CRITICAL)
    "py-clob-client==0.28.0",
    "py-order-utils==0.3.2",
    "web3==7.14.0",
    "poly-eip712-structs==0.0.1",

    # LangChain & AI
    "langchain==0.3.27",
    "langchain-community==0.3.24",
    "langchain-chroma==0.1.4",
    "openai==2.8.1",

    # Data & Vector Store
    "chromadb==0.5.23",

    # News & Search APIs
    "newsapi-python==0.2.7",
    "tavily-python==0.7.13",
    "exa-py==2.0.0",
    "kagiapi==0.2.1",

    # Web Framework
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.36.0,<1.0.0",

    # HTTP Clients
    "httpx>=0.28.0,<1.0.0",
    "requests>=2.32.0,<3.0.0",

    # CLI Tools
    "typer>=0.19.0,<1.0.0",
    "devtools>=0.12.0,<1.0.0",

    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "scheduler==0.8.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "black==24.4.2",
    "pre-commit>=4.0.0,<5.0.0",
]

[project.scripts]
polymarket-cli = "scripts.python.cli:app"

[project.urls]
Homepage = "https://github.com/polymarket/agents"
Documentation = "https://github.com/polymarket/agents"
Repository = "https://github.com/polymarket/agents"
Issues = "https://github.com/polymarket/agents/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "scripts"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.0,<10.0.0",
    "black==24.4.2",
    "pre-commit>=4.0.0,<5.0.0",
]
