[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-agents"
version = "0.1.0"
description = "AI agents for trading autonomously on Polymarket"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Polymarket"}
]
keywords = ["polymarket", "prediction-markets", "ai-agents", "trading", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "chromadb>=0.5.0",
    "langchain>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "langchainhub>=0.1.0",
    "langgraph>=0.1.0",
    "newsapi-python>=0.2.7",
    "openai>=1.0.0",
    "py-clob-client>=0.17.0",
    "py-order-utils>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scheduler>=0.8.7",
    "tavily-python>=0.3.0",
    "web3>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Polymarket/agents"
Repository = "https://github.com/Polymarket/agents"
Issues = "https://github.com/Polymarket/agents/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
